@@ -10,12 +10,6 @@
 #include <stdbool.h>
 
 int
-fd_mask_descriptor_flags(int fd, int and_mask, int xor_mask);
-
-int
-fd_set_cloexec(int fd);
-
-int
 fd_mask_status_flags(int fd, int and_mask, int xor_mask);
 
 bool
