@@ -7,6 +7,7 @@
 #include "header-writer.h"
 #include "lease.h"
 #include "direct.h"
+#include "fd_util.h"
 
 #include <inline/compiler.h>
 
@@ -25,7 +26,7 @@ connect_server(const char *path)
     int ret, sv[2];
     pid_t pid;
 
-    ret = socketpair(AF_UNIX, SOCK_STREAM, 0, sv);
+    ret = socketpair_cloexec(AF_UNIX, SOCK_STREAM, 0, sv);
     if (ret < 0) {
         perror("socketpair() failed");
         exit(EXIT_FAILURE);
